--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,53 @@
 {
-  "extends": ["airbnb", "prettier"],
-  "plugins": ["prettier"],
+  "parser": "@babel/eslint-parser",
+  "parserOptions": {
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
+  "plugins": ["unicorn", "prettier"],
+  "env": {
+    "es2021": true,
+    "node": true
+  },
   "rules": {
-    "prettier/prettier": ["error"]
+    "unicorn/filename-case": [
+      "error",
+      {
+        "case": "kebabCase"
+      }
+    ]
+  },
+  "overrides": [
+    {
+      "files": [
+        "**/*.spec.js",
+        "**/*.test.js"
+      ],
+      "env": {
+        "mocha": true
+      }
+    }
+  ],
+  "noInlineConfig": true,
+  "globals": {
+    "expect": true,
+    "fetch": true,
+    "self": true,
+    "jest": true,
+    "Atomics": "readonly",
+    "SharedArrayBuffer": "readonly"
+  },
+  "settings": {
+    "import/resolver": {
+      "babel-module": {
+        "@controller": ["./src/controller"],
+        "@logging": ["./src/logging"],
+        "@model": ["./src/model"],
+        "@repository": ["./src/repository"],
+        "@service": ["./src/service"],
+        "@util": ["./src/util"]
+      }
+    }
   }
 }
