--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-react-hooks": "^4.3.0"
   },
   "dependencies": {
+    "swagger": "^0.7.5",
+    "swagger-cli": "^4.0.4",
     "yarn": "^1.22.19"
   }
 }
